@@ -1,5 +1,8 @@
 Changelog
 
+NEXT RELEASE
+- Fixed byte order in image format string used for Pillow
+
 0.2.0
 - Add the font infos to the TextBox object (Poppler 0.89.0)
 - Added __version__ to the Python package
